--- a/exit_portal_backend/src/main/resources/application.properties
+++ b/exit_portal_backend/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=exit_portal_backend
+
+spring.datasource.url=jdbc:mysql://localhost:3306/exitportal
+spring.datasource.username=root
+spring.datasource.password=Nikki@2005
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Configuration
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# CORS Configuratio
