--- a/exit_portal_backend/src/main/resources/application.properties
+++ b/exit_portal_backend/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 # CORS Configuratio
+
+# Maximum file size
+spring.servlet.multipart.max-file-size=10MB
+# Maximum request size
+spring.servlet.multipart.max-request-size=10MB
