--- a/exit_portal_backend/src/main/resources/application.properties
+++ b/exit_portal_backend/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=exit_portal_backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/exitportal
+spring.datasource.url=jdbc:mysql://root:ukbvtVjBiLXVZTPtXrZbwITFtrkpbzDv@junction.proxy.rlwy.net:59727/railway
 spring.datasource.username=root
-spring.datasource.password=Nikki@2005
+spring.datasource.password=ukbvtVjBiLXVZTPtXrZbwITFtrkpbzDv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
 
 
 logging.level.org.hibernate.SQL=DEBUG
