--- a/Exit-Portal-Frontend/package.json
+++ b/Exit-Portal-Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "exit-portal": "file:",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
