--- a/exit_portal_backend/src/main/resources/application.properties
+++ b/exit_portal_backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=exit_portal_backend
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/exitportal
+spring.datasource.url=jdbc:mysql://localhost:3306/exitportalnew
 spring.datasource.username=root
-spring.datasource.password=Nikki@2005
+spring.datasource.password=Honey_003
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
