--- a/exit_portal_backend/src/main/resources/application.properties
+++ b/exit_portal_backend/src/main/resources/application.properties
@@ -1,30 +1,31 @@
+# Application Name
 spring.application.name=exit_portal_backend
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/exitportalnew
-spring.datasource.username=root
-spring.datasource.password=Honey_003
-
-
+# Database Configuration
+spring.datasource.url=jdbc:mysql://database-1.c5q0m4iqcu3b.ap-south-1.rds.amazonaws.com:3306/exitportal
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Uncomment the following line if you switch to localhost or a different database
+# spring.datasource.url=jdbc:mysql://34.41.119.117:3306/exitportal
+# spring.datasource.url=jdbc:mysql://localhost:3306/exitportal
+# spring.datasource.username=root
+# spring.datasource.password=Nikki@2005
+
 # JPA / Hibernate Configuration
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.properties.hibernate.format_sql=true
 
-
-
-
-
+# Logging Levels (Optional, uncomment to enable)
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-# spring.jpa.properties.hibernate.format_sql=flase
 
-
-# CORS Configuratio
-
-# Maximum file size
+# File Upload Limits
 spring.servlet.multipart.max-file-size=10MB
-# Maximum request size
 spring.servlet.multipart.max-request-size=10MB
+
+# CORS Configuration (Optional, for handling cross-origin requests)
+
