--- a/exit_portal_backend/src/main/resources/application.properties
+++ b/exit_portal_backend/src/main/resources/application.properties
@@ -2,16 +2,16 @@
 spring.application.name=exit_portal_backend
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://database-1.c5q0m4iqcu3b.ap-south-1.rds.amazonaws.com:3306/exitportal
-spring.datasource.username=admin
-spring.datasource.password=admin123
+# spring.datasource.url=jdbc:mysql://database-1.c5q0m4iqcu3b.ap-south-1.rds.amazonaws.com:3306/exitportal
+# spring.datasource.username=admin
+# spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Uncomment the following line if you switch to localhost or a different database
 # spring.datasource.url=jdbc:mysql://34.41.119.117:3306/exitportal
-# spring.datasource.url=jdbc:mysql://localhost:3306/exitportal
-# spring.datasource.username=root
-# spring.datasource.password=Nikki@2005
+spring.datasource.url=jdbc:mysql://localhost:3306/exitportal
+spring.datasource.username=root
+spring.datasource.password=Nikki@2005
 
 # JPA / Hibernate Configuration
 spring.jpa.show-sql=true
